T908 -  AccountObject - formate changes